@@ -105,8 +105,8 @@ is missing here, please remind me!):
 - Kenneth Kaufman: MS VC6 & C++ compiler and multiple GEMDOS HD
   partition support patches.
 
-- Uwe Seimet: IDE emulation improvements and GEMDOS HD emulation
-  improvement suggestions.
+- Uwe Seimet: IDE emulation improvements, GEMDOS HD emulation
+  improvement suggestions and SCSI Driver for Linux.
 
 - Anders Eriksson (Evil/DHS): Helped improving STE's emulation by
   running many tests programs and providing the source code for some
