@@ -5,7 +5,7 @@ set(SOURCES
 	control.c cycInt.c cycles.c dialog.c dmaSnd.c fdc.c file.c
 	floppy.c floppy_ipf.c floppy_stx gemdos.c hd6301_cpu.c hdc.c ide.c ikbd.c ioMem.c
 	ioMemTabST.c ioMemTabSTE.c ioMemTabTT.c ioMemTabFalcon.c joy.c
-	keymap.c m68000.c main.c midi.c memorySnapShot.c mfp.c
+	keymap.c m68000.c main.c midi.c memorySnapShot.c mfp.c nf_scsidrv.c
 	paths.c  psg.c printer.c resolution.c rs232.c reset.c rtc.c
 	scandir.c stMemory.c screen.c screenSnapShot.c shortcut.c sound.c
 	spec512.c statusbar.c str.c tos.c unzip.c utils.c vdi.c
